<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_main"
    tools:context=".presentation.view.MainActivity">

    <TextView
        android:id="@+id/tvToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:text="@string/toolbar_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/city_name_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/current_temperature_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvFeelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/feels_like_temperature_description_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTempRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/min_temperature_max_temperature"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/pressure_value_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/humidity_percentage"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/visibility_km_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/wind_speed_value_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvGust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/gust_value_placeholder"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_for_weather_info"
        android:text="@string/direction_value"
        android:textSize="14sp" />

</LinearLayout>
